# ws_t

./: .gitignore  README.md
LQ_Test_Demo/: 历史版本更新记录.txt
LQ_Test_Demo/Demo/: LQ_ADC_Demo.cpp  LQ_Cam_Demo.cpp  LQ_Delay_Demo.cpp  LQ_Encoder_Demo.cpp  LQ_Gpio_In_Demo.cpp  LQ_Gpio_Out_Demo.cpp  LQ_Gtim_Pwm_Demo.cpp  LQ_Gyro_Demo.cpp  LQ_Motor_Demo.cpp  LQ_Other_Demo.cpp  LQ_Pwm_Demo.cpp  LQ_Servo_Demo.cpp  LQ_TCP_Demo.cpp  LQ_TFT_Demo.cpp  LQ_Timer_Demo.cpp  LQ_UDP_Demo.cpp  LQ_Uart_Demo.cpp  LQ_demo.hpp
LQ_Test_Demo/Driver/: Makefile
LQ_Test_Demo/Driver/MPU6050_Dri/: LQ_MPU6050_dri.c
LQ_Test_Demo/Driver/TFT18_Driver/: Makefile
LQ_Test_Demo/Driver/TFT18_Driver/inc/: hw_gpio.h
LQ_Test_Demo/Driver/inc/: LQ_ls_i2c_gyro.h
LQ_Test_Demo/Main/: CMakeLists.txt  main.cpp  main.hpp
LQ_Test_Demo/Server/: UDP_Server.c
LQ_ls2k300_LIB_V1.1/: 关于V1.1库(必读).txt  历史版本更新记录.txt
LQ_ls2k300_LIB_V1.1/Driver/: LQ_MPU6050_dev.c
LQ_ls2k300_LIB_V1.1/Driver/MPU6050_Dri/: Makefile
LQ_ls2k300_LIB_V1.1/Driver/MPU6050_Dri/inc/: LQ_ls_i2c_dri.h
LQ_ls2k300_LIB_V1.1/Driver/TFT18_Driver/: TFT18_dri.c
LQ_ls2k300_LIB_V1.1/Driver/TFT18_Driver/inc/: TFT18_dri.h
LQ_ls2k300_LIB_V1.1/Libraries/APP/Display/: LQ_TFT18_dri.cpp
LQ_ls2k300_LIB_V1.1/Main/: CMakeLists.txt  main.cpp  main.hpp
LQ_ls2k300_LIB_V1.1/Server/: LQ_UDP_Camera_Receiver.cpp  LQ_UDP_Camera_Sender.cpp  TCP_Server.c  UDP图传请先看此文档.txt
LQ_ls2k300_LIB_V1.1/User/: README_STRUCTURE.md  camera.cpp  camera.h  controller.cpp  controller.hpp  debuger.cpp  debuger.h  displayer.cpp  displayer.h  imu.cpp  imu.h  serial.cpp  serial.h  thread_timing.hpp  该文件夹可以存放自定义文件.txt
LQ_ls2k300_LIB_V1.1/code_refer/: camera.c
资料文档/: 根据久久派拓展板的引脚资源分配.xlsx
